(#10) Suggestion controller created

--- a/SuggestionBoard.Web/wwwroot/css/site.css
+++ b/SuggestionBoard.Web/wwwroot/css/site.css
@@ -1,6 +1,10 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+.bd-navbar {
+  background-color: #7952b3;
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -60,7 +64,8 @@ html {
 
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  margin-bottom: 60px;  
+  /* color: #fff; */
 }
 .footer {
   position: absolute;
@@ -68,4 +73,10 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+/*-----------------------------------------*/
+
+#btn-new-suggestion {
+    margin-bottom: 1rem;
 }
