--- a/SuggestionBoard.Web/Views/Contact/Index.cshtml
+++ b/SuggestionBoard.Web/Views/Contact/Index.cshtml
@@ -1,11 +1,49 @@
-﻿@{
+﻿@using SuggestionBoard.Data.ViewModel;
+@model ContactRequestVM
+
+@{
     ViewData["Title"] = "Contact";
 }
 
-<h1>Contact index</h1>
+<h2>Contact</h2>
 
+@using (Html.BeginForm("Send"))
+{
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.ValidationMessageFor(model => model.GeneralError)
 
-asdasdsa
+    <div class="form-group">
+        @Html.LabelFor(model => model.Name)
+        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.EMail)
+        @Html.EditorFor(model => model.EMail, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.EMail, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Subject)
+        @Html.EditorFor(model => model.Subject, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Subject, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Message)
+        @Html.EditorFor(model => model.Message, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Message, "", new { @class = "text-danger" })
+    </div>
+
+    <input type="submit" value="Send" class="btn btn-success btn-lg" />
+}
+
+@if (ViewBag.MessageSendSuccess != null)
+{
+
+    <div class="alert alert-success" role="alert">
+        @ViewBag.MessageSendSuccess
+    </div>
+}
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
