--- a/SuggestionBoard.Web/Views/Suggestion/Detail.cshtml
+++ b/SuggestionBoard.Web/Views/Suggestion/Detail.cshtml
@@ -30,6 +30,7 @@ else
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.ValidationMessageFor(model => model.GeneralError)
 
     <div class="form-group">
         @Html.LabelFor(model => model.Title)
