--- a/SuggestionBoard.Web/Views/Suggestion/Detail.cshtml
+++ b/SuggestionBoard.Web/Views/Suggestion/Detail.cshtml
@@ -4,14 +4,7 @@
 @{
     bool isNewRecord = Model == null || Model.Id == null || Model.Id == Guid.Empty;
 
-    if (!isNewRecord && Model.CanEdit)
-    {
-        ViewData["Title"] = "Edit Suggestion";
-    }
-    else
-    {
-        ViewData["Title"] = "New Suggestion";
-    }
+    ViewData["Title"] = "Suggestion Detail";
 }
 
 @if (isNewRecord)
@@ -22,7 +15,7 @@ else
 {
     <div class="row">
         <div class="col-8">
-            <h2>@(Model.CanEdit? "Edit": "View") Suggestion <em class="text-muted h5">[@Model.Id.ToString()]</em></h2>
+            <h2>@(Model.CanEdit? "Edit": "View") Suggestion</h2>
         </div>
         <div class="col-4">
             @await Html.PartialAsync("_ReactionButtonGroup", Model.Id)
@@ -83,6 +76,12 @@ else
         @Html.LabelFor(model => model.Rec.Description)
         @Html.EditorFor(model => model.Rec.Description, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
     </div>
+
+    <div class="row col-12">
+        <label for="senderLink" style="margin-right:0.5rem">Sender:</label>
+        <a id="senderLink" asp-action="Profile" asp-controller="User" asp-route-id="@Model.Rec.CreateBy">@Model.Rec.CreateByName</a>
+    </div>
+
 }
 
 <br />
