--- a/SuggestionBoard.Web/Views/User/Edit.cshtml
+++ b/SuggestionBoard.Web/Views/User/Edit.cshtml
@@ -1,10 +1,78 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using SuggestionBoard.Data.ViewModel;
+@model ProfileUpdateVM
+
 @{
+    ViewData["Title"] = "Edit Profile";
 }
 
+<h2>Update Your Data</h2>
+
+@using (Html.BeginForm("Edit"))
+{
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.ValidationMessageFor(model => model.GeneralError)
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.EMail)
+        @Html.EditorFor(model => model.EMail, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.EMail, "", new { @class = "text-danger" })
+    </div>
+
+    <div class="row">
+        <div class="col-9">
+            <div class="form-group">
+                @Html.LabelFor(model => model.PictureUrl)
+                @Html.EditorFor(model => model.PictureUrl, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PictureUrl, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="col-3">
+            <img src="@(Model.PictureUrl == null || Model.PictureUrl == "" ? "/StaticFiles/defaultUserPicture.jpg": Model.PictureUrl)"
+                 height="200" width="200" class="img-thumbnail rounded float-right" id="imagePreview">
+        </div>
+    </div>
+
+    <hr />
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.OldPassword)
+        @Html.EditorFor(model => model.OldPassword, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.OldPassword, "", new { @class = "text-danger" })
+    </div>
+
+    <br />
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.NewPassword)
+        @Html.EditorFor(model => model.NewPassword, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.NewPassword, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.ConfirmPassword)
+        @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
+    </div>
+
+    <input type="submit" value="Save" class="btn btn-success btn-lg" />
+}
+
+<br />
+
+<div>
+    @Html.ActionLink("Cancel", "Profile", "User")
+</div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+<script type="text/javascript">
+    $(function () {
+        $("#PictureUrl").change(function () {
+            $("#imagePreview").attr('src', $("#PictureUrl").val());
+        });
+    });
+</script>
