--- a/SuggestionBoard.Web/Views/User/Profile.cshtml
+++ b/SuggestionBoard.Web/Views/User/Profile.cshtml
@@ -1,5 +1,86 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using SuggestionBoard.Data.ViewModel
+@using SuggestionBoard.Core.Enum
+@model ProfileVM
+
 @{
+    ViewData["Title"] = Model.EMail;
 }
+
+<div class="container">
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <img src="@(Model.PictureUrl == null || Model.PictureUrl == "" ? "/StaticFiles/defaultUserPicture.jpg": Model.PictureUrl)" 
+                        height="200" width="200" class="img-thumbnail rounded float-left">
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <div class="col">
+                            <div class="h4 text-muted">
+                                @Model.EMail
+                            </div>
+                        </div>
+                        <div class="col-1 float-right" style="margin-right:1rem">
+                            @if (Model.CurrentUserId == Model.UserId)
+                            {
+                                <a type="button" class="btn btn-sm btn-primary" aria-disabled="true"
+                                    asp-action="Edit">
+                                    Edit
+                                </a>
+                            }
+                        </div>
+                    </div>
+
+                    <hr />
+
+                    <p>
+                        Suggestion Count: <span style="font-weight:bold">@Model.SuggetionCount</span>
+                    </p>
+
+                    <p>
+                        Comment Count: <span style="font-weight:bold">@Model.Comments.Count</span>
+                    </p>
+
+                    <p>
+                        Reaction Count: <span style="font-weight:bold">@Model.Reactions.Count</span>
+                    </p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Suggestions</a>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Comments</a>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Reactions</a>
+                </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                    <div class="container" style="margin-top: 0.5rem">
+                        @await Html.PartialAsync("../Home/_ListToolbar", new RouteVM() { ControllerName = "User", ActionName = "Profile" })
+
+                        @await Html.PartialAsync("../Home/_SuggestionList", Model.Suggestion.Records)
+
+                        @await Html.PartialAsync("../Home/_PaggingButtonGroup", Model.Suggestion.Pagging)
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                    @await Html.PartialAsync("_ProfileCommentList", Model.Comments)
+                </div>
+                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+                    @await Html.PartialAsync("_ProfileReactionList", Model.Reactions)
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
