--- a/SuggestionBoard.Web/Views/Shared/_PaggingButtonGroup.cshtml
+++ b/SuggestionBoard.Web/Views/Shared/_PaggingButtonGroup.cshtml
@@ -8,6 +8,7 @@
                 asp-controller="@Model.ControllerName"
                asp-action="@Model.ActionName"
                asp-route-sortOrder="@(ViewData["CurrentSort"])"
+               asp-route-categoryId="@(ViewData["Category"])"
                asp-route-searchString="@ViewData["CurrentFilter"]"
                asp-route-pageNumber="@(ViewData["PageNumber"]!= null && (ViewData["PageNumber"] as int?).Value > 1 ? (ViewData["PageNumber"] as int?).Value - 1 : 1 )"
                class="@(ViewData["PageNumber"]!= null && (ViewData["PageNumber"] as int?).Value > 1 ? "btn btn-light" : "btn btn-light disabled")">
@@ -17,7 +18,7 @@
                asp-controller="@Model.ControllerName"
                asp-action="@Model.ActionName"
                asp-route-sortOrder="@(ViewData["CurrentSort"])"
-               asp-route-searchString="@ViewData["CurrentFilter"]"
+               asp-route-categoryId="@(ViewData["Category"])"
                asp-route-pageNumber="@(Model.IsNextPageExist ? (ViewData["PageNumber"]!= null ? (ViewData["PageNumber"] as int?).Value + 1 : 2) : 1 )"
                class="@(Model.IsNextPageExist? "btn btn-light" : "btn btn-light disabled")">
                 Next
