--- a/SuggestionBoard.Web/Views/User/Edit.cshtml
+++ b/SuggestionBoard.Web/Views/User/Edit.cshtml
@@ -13,18 +13,28 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.ValidationMessageFor(model => model.GeneralError)
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.EMail)
-        @Html.EditorFor(model => model.EMail, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.EMail, "", new { @class = "text-danger" })
-    </div>
+
 
     <div class="row">
         <div class="col-9">
-            <div class="form-group">
-                @Html.LabelFor(model => model.PictureUrl)
-                @Html.EditorFor(model => model.PictureUrl, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PictureUrl, "", new { @class = "text-danger" })
+            <div class="row">
+                <div class="col-12">
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.EMail)
+                        @Html.EditorFor(model => model.EMail, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.EMail, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.PictureUrl)
+                        @Html.EditorFor(model => model.PictureUrl, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.PictureUrl, "", new { @class = "text-danger" })
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-3">
