--- a/SuggestionBoard.Web/Views/User/Profile.cshtml
+++ b/SuggestionBoard.Web/Views/User/Profile.cshtml
@@ -67,11 +67,11 @@
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                     <div class="container" style="margin-top: 0.5rem">
-                        @await Html.PartialAsync("../Home/_ListToolbar", new RouteVM() { ControllerName = "User", ActionName = "Profile" })
+                        @await Html.PartialAsync("../Home/_ListToolbar", Model.ToolbarData)
 
                         @await Html.PartialAsync("../Home/_SuggestionList", Model.Suggestion.Records)
 
-                        @await Html.PartialAsync("../Home/_PaggingButtonGroup", Model.Suggestion.Pagging)
+                        @await Html.PartialAsync("../Shared/_PaggingButtonGroup", Model.Suggestion.Pagging)
                     </div>
                 </div>
                 <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
