#27 : User list added
Category mapping fixed

--- a/SuggestionBoard.Web/Views/Category/Index.cshtml
+++ b/SuggestionBoard.Web/Views/Category/Index.cshtml
@@ -10,7 +10,7 @@
 
         <div class="row">
             <div class="col">
-                <a id="btn-new-suggestion" class="btn btn-success btn-lg btn-block"
+                <a id="btn-new" class="btn btn-success btn-lg btn-block" style="margin-bottom:1rem"
                    asp-controller="Category" asp-action="Detail">Create New Category</a>
             </div>
         </div>
