--- a/SuggestionBoard.Web/Views/Shared/_Layout.cshtml
+++ b/SuggestionBoard.Web/Views/Shared/_Layout.cshtml
@@ -23,15 +23,19 @@
             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
         </li>*@
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Category" 
+                            <a class="nav-link text-light" asp-area="" asp-controller="Category"
                                asp-action="Index">Categories</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Contact" 
+                            <a class="nav-link text-light" asp-area="" asp-controller="User"
+                               asp-action="Index">Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Contact"
                                asp-action="Index">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" 
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home"
                                asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
