--- a/SuggestionBoard.Web/Views/User/_ProfileCommentList.cshtml
+++ b/SuggestionBoard.Web/Views/User/_ProfileCommentList.cshtml
@@ -3,10 +3,10 @@
 
 <div class="container" style="margin-top:0.5rem; margin-bottom:0.5rem;">
 
-    <div class="col-12">
+    <div class="row">
         @foreach (var item in Model)
         {
-            <div class="row">
+            <div class="col">
                 <div class="card text-md-left" style="margin-bottom:0.5rem">
                     <div class="card-body">
                         <a class="h4" asp-controller="Suggestion" asp-action="Detail" asp-route-id="@item.SuggestionId">@item.SuggestionTitle</a>
