--- a/SuggestionBoard.Web/Views/User/Edit.cshtml
+++ b/SuggestionBoard.Web/Views/User/Edit.cshtml
@@ -38,9 +38,10 @@
             </div>
         </div>
         <div class="col-3">
-            <img src="@(Model.PictureUrl == null || Model.PictureUrl == "" ? "/StaticFiles/defaultUserPicture.jpg": Model.PictureUrl)"
+            <img src="@(Model.PictureUrl == null || Model.PictureUrl == "" ? "defaultUserPicture.jpg": Model.PictureUrl)"
                  height="200" width="200" class="img-thumbnail rounded float-right" id="imagePreview">
         </div>
+
     </div>
 
     <hr />
