--- a/SuggestionBoard.Web/Views/User/_ProfileCommentList.cshtml
+++ b/SuggestionBoard.Web/Views/User/_ProfileCommentList.cshtml
@@ -14,7 +14,7 @@
                         @{
                             int dayCount = (int)Math.Round((DateTime.UtcNow - item.CreateDT).TotalDays);
                         }
-                        @dayCount days ago
+                        <em class="text-muted">@dayCount days ago</em>
                     </div>
                 </div>
             </div>
