--- a/SuggestionBoard.Web/Views/User/Profile.cshtml
+++ b/SuggestionBoard.Web/Views/User/Profile.cshtml
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-3">
-                    <img src="@(Model.PictureUrl == null || Model.PictureUrl == "" ? "/StaticFiles/defaultUserPicture.jpg": Model.PictureUrl)" 
+                    <img src="@(Model.PictureUrl == null || Model.PictureUrl == "" ? "defaultUserPicture.jpg": Model.PictureUrl)" 
                         height="200" width="200" class="img-thumbnail rounded float-left">
                 </div>
                 <div class="col-9">
